--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -1,1 +1,5 @@
 $cursor: url("/cursor-finger.png") 0 -15, pointer;
+$global-font: 'Dosis', sans-serif;
+$graph-body-grey: #222222;
+$panel-body-grey: #333333;
+$light-grey: #555555;
