--- a/public/_global.scss
+++ b/public/_global.scss
@@ -13,7 +13,7 @@ a, a-webkit-any-link {
   img {
     width: 100%;
     border-radius: 8px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   div {
@@ -26,7 +26,7 @@ a, a-webkit-any-link {
 
   &:hover {
     cursor: $cursor;
-    box-shadow: 0 14px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transform: scale(1.03)
+    box-shadow: 0 9px 13px 0 rgba(0, 0, 0, 0.2), 0 6px 15px 0 rgba(0, 0, 0, 0.19);
+    transform: scale(1.03);
   }
 }
