some styling on the profile page

--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -1,4 +1,5 @@
 $cursor: url("/cursor-finger.png") 0 -15, pointer;
+$scissors: url("/scissors-icon.png") 0 -15, pointer;
 $global-font: 'Dosis', sans-serif;
 $graph-body-grey: #222222;
 $panel-body-grey: #333333;
