--- a/public/_global.scss
+++ b/public/_global.scss
@@ -30,3 +30,29 @@ a, a-webkit-any-link {
     transform: scale(1.03);
   }
 }
+
+@mixin pulse {
+  animation-name: pulsate;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes pulsate {
+  0% {
+    // transform: scale(1);
+    font-size: 2em;
+    // opacity: 0.5;
+    
+  }
+  50% {
+    // transform: scale(1.1);
+    font-size: 2.2em;
+    // opacity: 0.8;
+  }
+  100% {
+    // transform: scale(1);
+    font-size: 2em;
+    // opacity: 0.5;
+  }
+}
