--- a/public/_global.scss
+++ b/public/_global.scss
@@ -38,21 +38,21 @@ a, a-webkit-any-link {
   animation-timing-function: linear;
 }
 
-@keyframes pulsate {
-  0% {
-    // transform: scale(1);
-    font-size: 2em;
-    // opacity: 0.5;
+// @keyframes pulsate {
+//   0% {
+//     transform: scale(1);
+//     // font-size: 2em;
+//     // opacity: 0.5;
     
-  }
-  50% {
-    // transform: scale(1.1);
-    font-size: 2.2em;
-    // opacity: 0.8;
-  }
-  100% {
-    // transform: scale(1);
-    font-size: 2em;
-    // opacity: 0.5;
-  }
-}
+//   }
+//   50% {
+//     transform: scale(1.1);
+//     // font-size: 2.2em;
+//     // opacity: 0.8;
+//   }
+//   100% {
+//     transform: scale(1);
+//     // font-size: 2em;
+//     // opacity: 0.5;
+//   }
+// }
