--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -1,7 +1,9 @@
 $cursor: url("/cursor-finger.png") 0 -15, pointer;
 $scissors: url("/scissors-icon.png") 0 -15, pointer;
 $global-font: 'Dosis', sans-serif;
+
+$base-white: #FFFFFF;
 $graph-body-grey: #222222;
 $panel-body-grey: #333333;
 $light-grey: #555555;
-
+$node-grey: #7A7978;
