--- a/public/_global.scss
+++ b/public/_global.scss
@@ -31,12 +31,12 @@ a, a-webkit-any-link {
   }
 }
 
-@mixin pulse {
-  animation-name: pulsate;
-  animation-duration: 1.4s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
+// @mixin pulse {
+//   animation-name: pulsate;
+//   animation-duration: 1.4s;
+//   animation-iteration-count: infinite;
+//   animation-timing-function: linear;
+// }
 
 // @keyframes pulsate {
 //   0% {
